# sk8-sk

./: .gitignore  package-lock.json
k8s-schedular-backend/: Cargo.toml  package-lock.json
k8s-schedular-backend/src/: main.rs  routes.rs
k8s-schedular-backend/src/auth/: login_register.rs  mod.rs
k8s-schedular-frontend-ts/: package-lock.json  package.json
k8s-schedular-frontend-ts/public/: index.html  styles.css
k8s-schedular-frontend-ts/src/: App.tsx  index.tsx
k8s-schedular-frontend-ts/src/components/: TaskComponent.tsx
k8s-schedular-frontend-ts/src/pages/: Home.css  Home.tsx  Login.tsx  Register.tsx
