[package]
name = "k8s-schedular-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11"
actix-web = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6"
neo4rs = "0.7.1"
argon2 = "0.5.2"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
